Fixed slider overlap issue.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -295,3 +295,7 @@ html, body {
   margin-right:25px;
   margin-bottom:10px;
 }
+
+.leaflet-clickable{
+
+}
